--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,6 @@ REDIS_HOST = redis
 REDIS_PORT = 6379
 CELERY_BROKER_URL = redis://localhost:6379/0
 CELERY_RESULT_BACKEND = redis://localhost:6379/0
-
+ROOT_PATH=/
 LOGIN_CBONDS = "LOGIN"
 PASSWORD_CBONDS = "PASSWORD"
