--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,7 +39,7 @@ services:
       - REDIS_URL=redis://redis:6379/0
       - CELERY_BROKER_URL=redis://redis:6379/0
       - CELERY_RESULT_BACKEND=redis://redis:6379/0  
-    command: celery -A celery_app worker --loglevel=info
+    command: celery -A src.celery_app worker --loglevel=info
     volumes:
       - .:/app
       - ./src:/app/src
@@ -54,7 +54,7 @@ services:
       - REDIS_URL=redis://redis:6379/0
       - CELERY_BROKER_URL=redis://redis:6379/0
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
-    command: celery -A celery_app beat --loglevel=info
+    command: celery -A src.celery_app beat --loglevel=info
     volumes:
       - .:/app
       - ./src:/app/src
