--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,7 +38,7 @@ services:
       - REDIS_URL=redis://redis:6379/0
       - CELERY_BROKER_URL=redis://redis:6379/0
       - CELERY_RESULT_BACKEND=redis://redis:6379/0  
-    command: celery -A src.celery_app worker --loglevel=info
+    command: celery -A src.celery_app worker --loglevel=info --concurrency=1 --prefetch-multiplier=1 -Ofair
     volumes:
       - .:/app
       - ./src:/app/src
